--- a/src/pages/scoreboard.css
+++ b/src/pages/scoreboard.css
@@ -3,4 +3,5 @@
     flex-wrap: wrap;
     justify-content: center;
     flex-direction: row;
+    align-items: center;
 }
